[package]
name = "winwifi"
version = "0.1.0"
edition = "2024"

[dependencies]
compio = { version = "=0.17.0", default-features = false, features = ["time"] }
plotters = { version = "=0.3.7", default-features = false, features = ["line_series"] }
thiserror = "=2.0.17"
windows-sys = { version = "=0.61.2", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_WiFi",
    "Win32_Networking_WinSock",
] }
winio = { version = "=0.10.0", default-features = false, features = ["plotters", "winui"] }

[profile.release]
lto = true
codegen-units = 1
